# term2

./: .actrc  .clippy.toml  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/term2/: MainActivity.kt  RustBridge.kt  Term2Application.kt
android/app/src/main/java/com/term2/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
api/: Cargo.toml
api/src/: app.rs  auth.rs  lib.rs  main.rs  state.rs
api/src/routes/: health.rs  mod.rs  panes.rs  profiles.rs  sessions.rs  windows.rs
api/tests/: health.rs  pane_flow.rs  session_flow.rs  warp_features.rs  window_flow.rs
crates/term2-android/: Cargo.toml
crates/term2-android/src/: android.rs  lib.rs
crates/term2-core/: Cargo.toml
crates/term2-core/src/: agent_mode.rs  block.rs  command_palette.rs  completions.rs  input_editor.rs  keybinding.rs  launch_config.rs  layout.rs  lib.rs  native_session.rs  notification.rs  pane.rs  paths.rs  profile.rs  pty.rs  pty_manager.rs  scrollback.rs  session.rs  theme.rs  warp_drive.rs  window.rs
docs/: PHASE-STATUS.md  ROADMAP.md
docs/superpowers/plans/: 2026-07-02-term2-phase2-tabbed-windows.md  2026-07-02-term2-phase2-windows-panes.md
docs/superpowers/specs/: 2026-07-02-term2-phase2-tabbed-windows-design.md  2026-07-02-term2-phase2-windows-panes-design.md
docs/warp-test-scenarios/: README.md  generate-index.py  term2-delivery-scenarios.md  warp-docs-chunk-00.md  warp-docs-chunk-01.md  warp-docs-chunk-02.md  warp-docs-chunk-03.md  warp-docs-chunk-04.md  warp-docs-chunk-05.md  warp-docs-chunk-06.md  warp-docs-chunk-07.md  warp-docs-chunk-08.md  warp-docs-chunk-09.md  warp-docs-chunk-10.md
e2e/: package-lock.json  package.json  playwright.config.ts  run.sh
e2e/support/: fixtures.ts
e2e/tests/: portal.spec.ts  warp-ux.spec.ts
ops/systemd/: term2.service
web/: index.html  term2.css  term2.js  terminal.html
