[workspace]
members = ["crates/*", "api"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kevin Couton <kevin.couton@gmail.com>"]
license = "MIT"
repository = "https://github.com/kevincouton/term2"
publish = false

[workspace.dependencies]
term2-core = { path = "crates/term2-core" }

axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
portable-pty = "0.9"
dirs = "6.0"
which = "7.0"

[profile.release]
debug = 1
lto = "thin"

[profile.dev]
debug = "line-tables-only"
