[package]
name = "term2-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
portable-pty = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
