[package]
name = "term2-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
portable-pty = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "fs"] }
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
